--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,8 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Crunix">
 	<main>
-		<h1>Portfolio</h1>
+		<h1>Main Page</h1>
 	</main>
 </Layout>
