upload image correction

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,9 +7,11 @@ import localHeroImage from '../assets/img/main.png';
 
 <Layout title="Edgar G. Vargas">
 	<main>
-		<div class="flex flex-row items-center justify-center">
-			<h1 class="text-6xl font-bold">Edgar G. Vargas</h1>
-			<Image src={ localHeroImage } alt="Hero" loading="eager" />
-		</div>
+		<section>
+			<div class="flex flex-row justify-center items-center">
+				<h1 class="text-6xl font-bold">Edgar G. Vargas</h1>
+				<Image src={ localHeroImage } alt="Hero" loading="eager" />
+			</div>
+		</section>
 	</main>
 </Layout>
