--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,12 @@ import localHeroImage from '../assets/img/main.png';
 	<main>
 		<section>
 			<div class="flex flex-row justify-center items-center">
-				<h1 class="text-6xl font-bold">Edgar G. Vargas</h1>
+				<div>
+					<h1 class="text-6xl font-bold">Edgar G. Vargas</h1>
+					<p class="text-xl">
+						Software Developer
+					</p>
+				</div>
 				<Image src={ localHeroImage } alt="Hero" loading="eager" />
 			</div>
 		</section>
